--- a/WP/Hydra/Hydra.csproj
+++ b/WP/Hydra/Hydra.csproj
@@ -189,6 +189,12 @@
     <Content Include="Assets\AppBar\next.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\AppBar\stop.png" />
+    <Content Include="Assets\AppBar\transport.pause.png" />
+    <Content Include="Assets\AppBar\transport.play.png" />
+    <Content Include="Assets\btn-urgent-bg-highlighted%402x.png" />
+    <Content Include="Assets\btn-urgent-pause%402x.png" />
+    <Content Include="Assets\btn-urgent-play%402x.png" />
     <Content Include="Assets\hydraBackGround.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -204,6 +210,8 @@
     <Content Include="Assets\info-more%402x.png" />
     <Content Include="Assets\info-sports%402x.png" />
     <Content Include="Assets\info-urgent%402x.png" />
+    <Content Include="Assets\urgent-bg%402x.jpg" />
+    <Content Include="Assets\urgent-logo%402x.png" />
     <Content Include="Resources\webview.css" />
     <Content Include="Toolkit.Content\ApplicationBar.Cancel.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Check.png" />
@@ -263,7 +271,12 @@
       <HintPath>packages\Newtonsoft.Json.4.5.11\lib\sl4-windowsphone71\Newtonsoft.Json.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Urgent.fmPlayer\Urgent.fmPlayer.csproj">
+      <Project>{72AE36E6-5CE9-4131-B0E0-5F7B131C13B4}</Project>
+      <Name>Urgent.fmPlayer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
