--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          android:versionCode="108" android:versionName="1.0-beta"
+          android:versionCode="109" android:versionName="1.0"
           package="be.ugent.zeus.hydra">
     <!-- versionCode format: 
    	x     -> major changes new features 
