--- a/WP/Hydra/Hydra.csproj
+++ b/WP/Hydra/Hydra.csproj
@@ -203,18 +203,17 @@
     <Content Include="Assets\hydraBackGround.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\hydraBackGroundDark.png" />
     <Content Include="Assets\icon-meal%402x.png" />
     <Content Include="Assets\icon-soup%402x.png" />
     <Content Include="Assets\icon-vegetables%402x.png" />
     <Content Include="Assets\info-academiccalendar%402x.png" />
     <Content Include="Assets\info-bicycle%402x.png" />
     <Content Include="Assets\info-doctors%402x.png" />
-    <Content Include="Assets\info-durfdoen%402x.png" />
     <Content Include="Assets\info-library%402x.png" />
     <Content Include="Assets\info-minerva%402x.png" />
     <Content Include="Assets\info-more%402x.png" />
     <Content Include="Assets\info-sports%402x.png" />
-    <Content Include="Assets\info-urgent%402x.png" />
     <Content Include="Assets\urgent-bg%402x.jpg" />
     <Content Include="Assets\urgent-nowplaying%402x.jpg" />
     <Content Include="Resources\webview.css" />
